Fixed extension checking. Fixed overflowing.

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -40,6 +40,7 @@ wrapper {
 
 tabs {
 	display: flex;
+	flex: 0 0;
 	flex-direction: row;
 	text-transform: uppercase;
 	border-bottom: 2px solid #6a6a6a;
@@ -145,9 +146,11 @@ room.active {
 
 content {
 	background: #535353;
-	flex: 1 0 100%;
+	flex: 1 1 100%;
 	display: flex;
 	flex-direction: column;
+    max-height: 100%;
+    overflow-y: auto;	
 }
 
 wrapper {
